tests/baselines/reference/declarationEmitDefaultExport5.errors.txt
tests/cases/compiler/declarationEmitDefaultExport5.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/declarationEmitDefaultExport5.ts (1 errors) ====
    export default 1 + 2;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    